# metchurial

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: PROVENANCE.md  query-identity.md  query-similarity.md  split-selects-and-metadata.md
src/: __init__.py  cli.py  io_utils.py  mask.py  predicates.py  report.py  scan.py  token_walk.py
src/detect/: __init__.py  bad_file_check.py  comment_rescan.py  extractor_visitor.py  statement_driver.py  supplementary_checks.py
src/metchurial/: __init__.py  cli.py  engine.py  incremental.py  interactive.py  io_utils.py  mask.py  quarantine.py  report.py  tsv.py
src/models/: __init__.py  findings.py  identity.py  references.py  relations.py  results.py
src/parsing/: __init__.py  predicates.py  statement_driver.py  token_walk.py
src/references/: __init__.py  function_visitor.py  query_identity.py  reference_visitor.py  relations.py  table_scan.py
src/split/: select_blocks.py
tests/: test_bad_file_check.py  test_bad_files_workflow.py  test_bundle.py  test_cli_similarity.py  test_db2_grammar_specific_cases.py  test_function_extraction.py  test_grammar_fix_regression.py  test_grammar_smoke.py  test_identity_granularity.py  test_incremental.py  test_interactive_cli.py  test_mask.py  test_quarantine.py  test_quarantine_bad_files.py  test_query_identity.py  test_query_identity_complex.py  test_reference_extraction.py  test_relations.py  test_report.py  test_scan.py  test_select_blocks.py  test_statement_driver.py  test_supplementary_checks.py  test_table_scan.py  test_unsplit.py
tests/fixtures/: 01_basic_hit.sql  02_operators.sql  03_multiline.sql  04_comments.sql  05_korean_names.sql  06_false_positives.sql  07_from_txt_export.txt  08_blank_literal.sql  09_paren_list_boundary.sql  10_subquery_in_list.sql  11_digit_boundary.sql  12_empty_paren_list.sql  13_comment_escape_recovery.sql  14_complex_multi_cte_query.sql  15_bad_sql.sql  16_masking_end_to_end.sql  17_ansi_join_chain.sql  18_cte_with_ansi_join.sql  19_zero_argument_functions.sql  20_query_identity_base.sql  21_query_identity_alias_variant.sql  22_query_identity_extra_column.sql  39_bare_korean_alias_no_as.sql  (+17 more)
(+33 files in other folders)
