[project]
name = "metchurial"
version = "0.1.0"
description = "Static scanner that detects hardcoded sensitive values in DB2 SQL files"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "antlr4-python3-runtime==4.13.2",
]

[project.scripts]
metchurial = "src.cli:main"

[dependency-groups]
dev = [
    "antlr4-tools==0.2.2",
    "stickytape==0.2.1",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py39"
extend-exclude = ["generated", "vendor"]
